style: reduced button width to avoid overflow

--- a/src/app/pages/planning/pages/view-group/view-group.component.css
+++ b/src/app/pages/planning/pages/view-group/view-group.component.css
@@ -34,3 +34,6 @@ table {
   -ms-user-select: none;
   user-select: none;
 }
+button.mat-menu-item {
+  width: 98%;
+}
